[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/sights.png" type="Texture" id=2]
[ext_resource path="res://Bullet/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/gunshot.ogg" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="PrismMesh" id=2]
size = Vector3( 0.4, 4, 0.2 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.245128 )
current = true
fov = 90.0
size = 0.13

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera"]

[node name="Control" type="Control" parent="Head/Camera/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Head/Camera/CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Head/Camera/CanvasLayer/Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 10.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Gun" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, -4.37114e-08, 1, -1, 1.91069e-15, -4.37114e-08, 0, -1, -4.37114e-08, 1, 0.512929, -1.55395 )
mesh = SubResource( 2 )
material/0 = null

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="GunShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="Head/Camera/CanvasLayer/Control/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
